<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orderingFromXml="true">

    <EditTextPreference
        android:key="@string/alarm_preference_name_key"
        android:title="@string/alarm_preference_name_title"
        android:summary="@string/alarm_preference_name_summary"
        />

    <PreferenceCategory
        android:title="@string/preference_header_1">

        <com.polydus.alarmclockfree.alarm.preferences.custom.TimePickerDialogPreference
            android:key="@string/alarm_preference_time_key"
            android:title="@string/alarm_preference_time_title"
            android:summary="@string/alarm_preference_time_summary"
            android:defaultValue="08:00"
            />

        <MultiSelectListPreference
            android:key="@string/alarm_preference_active_days_key"
            android:title="@string/alarm_preference_active_days_title"
            android:summary="@string/alarm_preference_active_days_summary"
            android:dialogTitle="Set alarm days"
            android:entries="@array/alarm_active_days_entries"
            android:entryValues="@array/alarm_active_days_values"
            android:defaultValue="@array/alarm_active_days_values"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_header_2">

        <ListPreference
            android:key="@string/alarm_preference_source_key"
            android:title="@string/alarm_preference_source_title"
            android:summary="@string/alarm_preference_source_summary"
            android:entries="@array/alarm_ringtone_source_entries"
            android:entryValues="@array/alarm_ringtone_source_values"
            android:defaultValue="@string/alarm_ringtone_source_values_ringtone"
            />


        <com.polydus.alarmclockfree.alarm.preferences.custom.SoundPreference
            android:key="@string/alarm_preference_ringtone_key"
            android:title="@string/alarm_preference_ringtone_title"
            android:summary="@string/alarm_preference_ringtone_summary"
            android:showSilent="false"
            android:defaultValue="content://settings/system/ringtone"
            android:ringtoneType="all"
            />

        <Preference
            android:key="@string/alarm_preference_custom_ringtone_key"
            android:title="@string/alarm_preference_custom_ringtone_title"
            android:summary="@string/alarm_preference_custom_ringtone_summary"
            />

         <com.polydus.alarmclockfree.alarm.preferences.custom.SeekBarPreference
            android:key="@string/alarm_preference_volume_key"
            android:title="@string/alarm_preference_volume_title"
            android:summary="@string/alarm_preference_volume_summary"

            />

        <CheckBoxPreference
            android:key="@string/alarm_preference_vibration_key"
            android:title="@string/alarm_preference_vibration_title"
            android:summary="@string/alarm_preference_vibration_summary"
            android:defaultValue="true"
            />

        <!--<CheckBoxPreference
            android:key="@string/alarm_preference_sound_key"
            android:title="Set alarm sound"
            android:summary="summary"
            android:defaultValue="true"
            />-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_header_3">

        <CheckBoxPreference
            android:key="@string/alarm_preference_snooze_enabled_key"
            android:title="@string/alarm_preference_snooze_enabled_title"
            android:summary="@string/alarm_preference_snooze_enabled_summary"
            android:defaultValue="true"
            />

        <com.polydus.alarmclockfree.alarm.preferences.custom.NumberPickerPreference
            android:key="@string/alarm_preference_snooze_time_key"
            android:title="@string/alarm_preference_snooze_time_title"
            android:summary="@string/alarm_preference_snooze_time_summary"

            />

    </PreferenceCategory>

</PreferenceScreen>